# syntaqlite

./: .gitignore  .gn  AGENTS.md  AUTHORS  BUILD.gn  LICENSE  README.md
docs/: ethos.md  plan.md
gn/: BUILD.gn  sqlite_gen.gni
gn/config/: BUILD.gn  BUILDCONFIG.gn
gn/standalone/: BUILD.gn  BUILDCONFIG.gn  asan_defaults.c
gn/toolchain/: BUILD.gn
include/syntaqlite/: BUILD.gn  ast.h  ast_defs.h  ast_nodes_gen.h  formatter.h  parser.h  sqlite_tokens_gen.h  tokenizer.h
python/: BUILD.gn
python/diff_tests/: runner.py  test_executor.py  test_loader.py  testing.py
python/sqlite_extractor/: __init__.py  c_tokenizer.py  constants.py  generators.py  grammar_build.py  lempar_transform.py  parser_extract.py  pipelines.py  source.py  tools.py  transforms.py
python/syntaqlite/: extension_tests.py
python/syntaqlite/ast_codegen/: __init__.py  ast_actions.y  codegen.py  defs.py  fmt_codegen.py  fmt_dsl.py  nodes.py  validator.py
python/syntaqlite/ast_codegen/ast_actions/: _common.y  aggregate.y  cast.y  column_ref_select.y  column_refs.y  compound.y  conditionals.y  create_table.y  cte.y  dml.y  expressions.y  exprlists.y  functions.y  identifiers.y  literals.y  misc_expr.y  orderby.y  raise_expr.y  schema_ops.y  select.y  table_source.y  trigger.y  utility_stmts.y  values.y  virtual_table.y  window.y
python/syntaqlite/ast_codegen/nodes/: __init__.py  _common.py  aggregate.py  cast.py  column_ref.py  compound.py  conditionals.py  create_table.py  cte.py  dml.py  expressions.py  functions.py  misc_expr.py  raise_expr.py  schema_ops.py  select.py  table_source.py  trigger.py  utility_stmts.py  values.py  window.py
python/syntaqlite/diff_tests/: runner.py  test_executor.py  test_loader.py  utils.py
python/syntaqlite/sqlite_extractor/: __init__.py  action_parser.py  c_tokenizer.py  generators.py  grammar_build.py  keywordhash.py  lemon_pipeline.py  lempar_transform.py  parser_extract.py  parser_split.py  rule_extractor.py  tools.py  transforms.py
python/tools/: build_extension_grammar.py  check_fmt_coverage.py  check_includes.py  diff_upstream_grammar.py  extract_grammar.py  extract_sqlite.py  extract_tokenizer.py  fix_include_guards.py  format_sources.py  generate_tokens.py  install_build_deps.py  run_third_party_binary.py  setup_all_configs.py  update_gn_version.py
src/: BUILD.gn  arena.c  arena.h  parser_api.c  parser_internal.h  smoke_unittest.cc  sq_getopt.h  sqlite_charmap.h  sqlite_parse.c  sqlite_tokenize.c  sqlite_tokens.h  synq_main.c  synq_sqlite_defs.h  syntaqlite_main.c  syntaqlite_sqlite_defs.h  token_list.c  token_list.h  tokenizer_api.c  vec.h
src/ast/: BUILD.gn  ast_base.c  ast_base.h  ast_builder.c  ast_builder.h  ast_builder_gen.c  ast_builder_gen.h  ast_helpers.h  ast_nodes.h  ast_nodes_gen.h  ast_print.c  ast_print.h  ast_print_gen.c  ast_test_main.c
src/base/: BUILD.gn  arena.c  arena.h  synq_getopt.c  synq_getopt.h  vec.h  xmalloc.h
src/codegen/: build.zig  build.zig.zon  build_synq_codegen.py  run_codegen.py  schema.json
src/codegen/nodes/: aggregate.json  cast.json  column_ref.json  common.json  compound.json  conditionals.json  create_table.json  cte.json  dml.json  expressions.json  functions.json  index.json  misc_expr.json  raise_expr.json  schema_ops.json  select.json  table_source.json  trigger.json  utility_stmts.json  values.json  window.json
src/codegen/src/: c_emitter.zig  c_tokenizer.zig  embedded_tools.zig  fmt_compiler.zig  generators.zig  grammar_build.zig  keywordhash.zig  lempar_transform.zig  main.zig  markers.zig  node_defs.zig  parser_extract.zig  parser_split.zig  string_utils.zig  tools.zig  transforms.zig
src/common/: BUILD.gn  synq_sqlite_defs.h
src/fmt/: BUILD.gn  comment_attach.c  comment_attach.h  comment_map.c  comment_map.h  doc.c  doc.h  doc_layout.c  doc_layout.h  fmt.c  fmt.h  fmt_gen.c  fmt_helpers.c  fmt_helpers.h  fmt_interpret.c  fmt_interpret_test.cc  fmt_ops.h  fmt_options.h  fmt_test_main.c  formatter_api.c  token_list.c  token_list.h
src/formatter/: BUILD.gn  comment_attach.c  comment_attach.h  doc.c  doc.h  doc_layout.c  doc_layout.h  fmt_gen.c  fmt_helpers.c  fmt_helpers.h  fmt_interpret.c  fmt_interpret_test.cc  fmt_ops.h  fmt_options.h  formatter.c
src/parser/: BUILD.gn  ast_base.c  ast_base.h  ast_builder_gen.c  ast_builder_gen.h  ast_nodes_gen.h  ast_print.h  ast_print_gen.c  parser.c  parser.h  parser_api.c  sqlite_parse_defs.h  sqlite_parse_gen.c  sqlite_parse_gen.h  sqlite_parse_tables.h  token_list.c  token_list.h
src/parser/actions/: _common.y  aggregate.y  cte.y  functions.y  misc_expr.y  utility_stmts.y
src/parser/nodes/: __init__.py  _common.py  aggregate.py  cast.py  column_ref.py  compound.py  conditionals.py  create_table.py  cte.py  dml.py  expressions.py  functions.py  misc_expr.py  raise_expr.py  schema_ops.py  select.py  table_source.py  trigger.py  utility_stmts.py  values.py  window.py
src/tokenizer/: BUILD.gn  sqlite_charmap_gen.h  sqlite_keywordhash.h  sqlite_keywordhash_data.h  sqlite_tables.h  sqlite_tokenize.c  sqlite_tokenize_gen.c  sqlite_tokenize_gen.h  sqlite_tokens.h  syntaqlite_defs.h  syntaqlite_tokenize_helper.h  tokenizer.c
src/tokenizer/sqlite/: BUILD.gn  sqlite_keywordhash.h  sqlite_tables.h  sqlite_tokenize.c  sqlite_tokens.h  syntaqlite_defs.h  syntaqlite_tokenize_helper.h
tests/ast_diff_tests/: __init__.py  aggregate_raise.py  cast_ptr_qnumber.py  column_refs.py  compound.py  conditionals.py  create_table.py  cte.py  dml.py  functions.py  include_index.py  misc_expr.py  schema_ops.py  select.py  select_clauses.py  table_source.py  trigger.py  utility_stmts.py  values.py  virtual_table.py  window_functions.py
tests/diff_tests/: include_index.py
tests/fmt_diff_tests/: comments.py  create_table.py  dml.py  misc.py  schema_ops.py  select.py  utility_stmts.py  window.py
tools/: build-extension-grammar  generate-tokens
tools/dev/: build-lock  check-fmt-coverage  check-includes  diff-upstream-grammar  extract-grammar  extract-sqlite  extract-tokenizer  fix-include-guards  format-sources  gn  install-build-deps  ninja  setup-all-configs  zig  (+2 more)
(+28 files in other folders)
