# Shared build configs for src/ subtargets.

# Lemon-generated code has unused variables when semantic actions are empty
config("lemon_generated") {
  cflags = [
    "-Wno-unused-parameter",
    "-Wno-unused-variable",
  ]
}

# Combined CLI tool: synq <ast|fmt|doc> [options] < input.sql
executable("synq") {
  testonly = true
  sources = [ "synq_main.c" ]
  deps = [
    "base:getopt",
    "../include/syntaqlite:headers",
    "parser:parser_api",
    "formatter:formatter_api",
  ]
  if (is_asan) {
    deps += [ "//gn/standalone:asan_defaults" ]
  }
  configs += [ ":lemon_generated" ]
}
