# Shared build configs for src/ subtargets.

# Lemon-generated code has unused variables when semantic actions are empty
config("lemon_generated") {
  cflags = [
    "-Wno-unused-parameter",
    "-Wno-unused-variable",
  ]
}

# Combined CLI tool: syntaqlite <ast|fmt|doc> [options] < input.sql
executable("syntaqlite") {
  testonly = true
  sources = [ "syntaqlite_main.c" ]
  deps = [
    "base:getopt",
    "../include/syntaqlite:headers",
    "parser",
    "formatter",
  ]
  if (is_asan) {
    deps += [ "../gn/standalone:asan_defaults" ]
  }
  configs += [ ":lemon_generated" ]
}

# Shortcut: synqfmt [options] < input.sql (defaults to fmt mode)
executable("synqfmt") {
  testonly = true
  sources = [ "syntaqlite_main.c" ]
  deps = [
    "base:getopt",
    "../include/syntaqlite:headers",
    "parser",
    "formatter",
  ]
  if (is_asan) {
    deps += [ "../gn/standalone:asan_defaults" ]
  }
  configs += [ ":lemon_generated" ]
}
