# Document model, layout engine, and formatter.
source_set("fmt") {
  sources = [
    "doc.c",
    "doc.h",
    "fmt_gen.c",
    "fmt_helpers.c",
    "fmt_helpers.h",
    "fmt_interpret.c",
    "fmt_ops.h",
  ]
  deps = [
    "../base:arena",
    "../base:vec",
    "../common",
    "../parser:ast",
    "../parser:token_list",
    "../tokenizer",
  ]
}

# Public formatter API bridging parser and formatter internals.
source_set("formatter_api") {
  sources = [ "formatter.c" ]
  deps = [
    "../../include/syntaqlite:headers",
    "../parser:parser_api",
    ":fmt",
  ]
}

# Test binary for format interpreter
executable("fmt_interpret_test") {
  testonly = true
  sources = [
    "fmt_interpret_test.cc",
  ]
  deps = [
    "../../include/syntaqlite:headers",
    "../../third_party:googletest",
    "../../third_party:googletest_main",
    "../parser:ast",
    ":fmt",
  ]
}