# SQLite tokenizer (extracted so :fmt can use it for comment injection).
# Regenerate with: python3 python/tools/extract_sqlite.py

source_set("tokenizer") {
  sources = [
    "sqlite_charmap_gen.h",
    "sqlite_tokenize_gen.c",
    "sqlite_tokenize_gen.h",
  ]
  deps = [
    "../common",
  ]
  configs += [ "..:lemon_generated" ]
}

# Public tokenizer API.
source_set("tokenizer_api") {
  sources = [
    "tokenizer_api.c",
  ]
  deps = [
    "../common",
    "../../include/syntaqlite:headers",
    ":tokenizer",
  ]
}
