# SQLite tokenizer (extracted so :fmt can use it for comment injection).
# Regenerate with: python3 python/tools/extract_sqlite.py

import("../../gn/sqlite_gen.gni")

# Generated tokenizer files.
sqlite_gen("tokenizer_gen") {
  sources = [
    "sqlite_charmap_gen.h",
    "sqlite_tokenize_gen.c",
  ]
}

source_set("tokenize") {
  sources = [
    "sqlite_tokenize_gen.h",
  ]
  deps = [
    ":tokenizer_gen",
    "../common",
  ]
  configs += [ "..:lemon_generated" ]
}

# Public tokenizer API.
source_set("tokenizer") {
  sources = [
    "tokenizer.c",
  ]
  deps = [
    "../common",
    "../../include/syntaqlite:headers",
    ":tokenize",
  ]
}
